# chip-8-emu

./: CMakeLists.txt
include/: interpreter.h  keyboard.h  timer.h
src/: interpreter.cpp  keyboard.cpp  main.cpp
